--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 
     "@testing-library/user-event": "^13.5.0",
 
+    "firebase": "^10.1.0",
+
     "material": "^0.5.3",
 
     "react": "^18.2.0",
